# greenference-compute

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
infra/ansible/: README.md  inventory.example.yml  site.yml
infra/helm/greenference-compute/: Chart.yaml  values.yaml
infra/helm/greenference-compute/templates/: _helpers.tpl  deployment.yaml  service.yaml
services/compute-agent/: pyproject.toml
services/compute-agent/src/greenference_compute_agent/: config.py  main.py
services/compute-agent/src/greenference_compute_agent/application/: __init__.py  services.py
services/compute-agent/src/greenference_compute_agent/domain/: collateral.py  pod.py  ssh.py  telemetry.py  templates.py  vm.py  volume.py
services/compute-agent/src/greenference_compute_agent/infrastructure/: __init__.py  repository.py
services/compute-agent/src/greenference_compute_agent/transport/: __init__.py  routes.py  security.py
tests/: conftest.py
tests/unit/: test_attestation.py  test_pod_backend.py  test_telemetry.py  test_volume_manager.py
