[project]
name = "greenference-compute-repo"
version = "0.1.0"
description = "Greenference compute provider — Lium + Targon style pod/VM daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "services/compute-agent",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
