[project]
name = "greenference-compute-agent"
version = "0.1.0"
description = "Greenference compute provider agent — Lium + Targon style pod/VM daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "greenference-control-plane",
  "greenference-persistence",
  "greenference-protocol",
]

[project.optional-dependencies]
k8s = ["kubernetes>=28.0,<29.0"]

[tool.uv.sources]
greenference-control-plane = { path = "../../../greenference-api/services/control-plane" }
greenference-persistence = { path = "../../../greenference-api/packages/persistence" }
greenference-protocol = { path = "../../../greenference/protocol" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenference_compute_agent"]
